Fixes multiple table vertical spacing

--- a/assets/_styles/_tables.scss
+++ b/assets/_styles/_tables.scss
@@ -39,6 +39,9 @@ $summary-background: #e6eff5;
     display: block;
     width: 100%;
     overflow: auto;
+    & + .table__header {
+      margin-top: 2em;
+    }
   }
   &__footer {
     width: 100%;
